REGRESSION(269844@main): [GStreamer] WebCodecs encoders now closing from non-main thread https://bugs.webkit.org/show_bug.cgi?id=263846

Reviewed by Youenn Fablet.

Schedule the close/reset of encoders and decoders in the script execution context. Otherwise the
resetEncoder() might attempt to trigger rejection of pending flush promises from a non main thread,
leading to ASSERTs hit in Debug builds.

* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/webcodecs/video-encoder-config.https.any.worker-expected.txt:
* Source/WebCore/platform/audio/gstreamer/AudioEncoderGStreamer.cpp:
(WebCore::GStreamerAudioEncoder::create):
* Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:
(WebCore::GStreamerVideoEncoder::create):

Canonical link: https://commits.webkit.org/269913@main